# atcephes

./: ANNOUNCE  COPYING  Makefile.am  README  configure.ac
doc/: cephes.texi
meta/scripts/: libcephes.pc.in
scheme/: cephes.sls  process.sps  table.scm  test-vicare.sps
scheme/cephes/: compat.vicare.sls
src/: cephes-version.c  cephes.h
src/cmath/: mconf.h
src/custom/: isfinite.c
tests/: beta.c  dtestvec.c  version.c
